[package]
name = "dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.207", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
mockito = "1.5.0"  # or the latest version
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"

